@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-21T08:22:59Z",
+  "timestamp" : "2022-05-21T16:25:21Z",
   "count_outdated" : 1855,
   "uniques_outdated" : 382,
-  "count" : 2137,
-  "uniques" : 420,
+  "count" : 2138,
+  "uniques" : 422,
   "clones" : [
     {
       "timestamp": "2022-05-07T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 3 ],
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
@@ -105,10 +105,10 @@
     },
     {
       "timestamp": "2022-05-21T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "uniques": 4,
-      "uniques_minmax": [ 4, 4 ]
+      "count": 8,
+      "count_minmax": [ 6, 8 ],
+      "uniques": 6,
+      "uniques_minmax": [ 4, 6 ]
     }
   ]
 }
