@@ -1,10 +1,10 @@
 {
-  "count": 282,
-  "uniques": 20,
+  "count": 283,
+  "uniques": 21,
   "clones": [
     {
       "timestamp": "2022-05-07T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -74,8 +74,8 @@
     },
     {
       "timestamp": "2022-05-21T00:00:00Z",
-      "count": 6,
-      "uniques": 4
+      "count": 8,
+      "uniques": 6
     }
   ]
 }
