@@ -1,3 +1,10 @@
+2022-05-21T16:25:21Z:
+* notice: last 14d: unq all: 21 283
+* notice: prev accum: outdated-unq outdated-all / unq all: 382 1855 / 420 2137
+* notice: next accum: outdated-unq outdated-all / unq all: 382 1855 / 422 2138
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +6 +8 -0 -0 / 6 8
+* notice: changed dates: [2022-05-07 2022-05-21]
+
 2022-05-21T08:22:59Z:
 * notice: last 14d: unq all: 20 282
 * notice: prev accum: outdated-unq outdated-all / unq all: 382 1855 / 416 2131
